fix code highlight spacing when in a list

--- a/assets/css/post-single.css
+++ b/assets/css/post-single.css
@@ -163,7 +163,7 @@
 }
 
 .post-content .highlight {
-    margin: auto 0 20px
+    margin: 10px auto
 }
 
 .post-content .highlighttable {
